--- a/sample.html
+++ b/sample.html
@@ -10,5 +10,10 @@
     <li>rupasravani</li>
     <li>satyasaiteja</li>
 </ul>
+<ol>
+    <li>jayasurya</li>
+    <li>rupasravani</li>
+    <li>satyasaiteja</li>
+</ol>
 </body>
 </html>
